--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,19 @@ hs_err_pid*
 replay_pid*
 
 # Eclipse files
-.classpath
-.project
-.settings/
+metadata
 bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.project
+.classpath
 
 # IntelliJ files
 .idea/
